--- a/docs/ADR/ADR-001.md
+++ b/docs/ADR/ADR-001.md
@@ -1,21 +1,16 @@
-# ADR 001 – Adoption de la structure MVC (Model-View-Controller) avec Django
 
-## Contexte
-Django repose sur une architecture proche du modèle MVC, bien qu’il nomme différemment certains composants (View = Template, Controller = View). Il est essentiel de structurer l’application de manière modulaire, cohérente et claire pour refléter les cas d’utilisation du système de gestion de magasin.
+#### ADR-001 : Domain-Driven Design comme Principe Architectural
 
-## Décision
-J'ai choisi d’adopter la structure MVC implicite de Django :
-- **Models** : définis dans `magasin/models`, responsables des entités persistées (Produit, Magasin, Stock, etc.)
-- **Views (contrôleurs)** : définies dans `magasin/views`, déclenchant les traitements métier
-- **Templates (vues utilisateurs)** : dans `magasin/templates`, pour générer le HTML
+**Status** : Accepted  
+**Context** : Besoin de décomposer un monolithe en microservices cohérents et maintenables  
+**Decision** : Adopter DDD avec bounded contexts, entités riches, use cases et value objects  
 
-## Raisons
-- Alignement naturel avec la structure Django
-- Meilleure séparation des responsabilités entre persistance, logique métier et interface
-- Favorise les tests unitaires et l’évolution modulaire du code
-- Clarifie les cas d’utilisation via des vues distinctes (UC1, UC2, etc.)
+**Alternatives considérées :**
+- Architecture CRUD par entité technique
+- Services orientés base de données
+- Architecture en couches traditionnelle
 
-## Conséquences
-- Respect strict du découplage Modèle / Vue / Contrôleur
-- Intégration facilitée avec les tests (contrôleurs testables indépendamment)
-- Possibilité d'étendre la logique métier dans des fichiers `controllers/` dédiés
+**Consequences :**
+- **Positives** : Séparation claire des préoccupations, logique métier centralisée, évolutivité
+- **Négatives** : Courbe d'apprentissage, complexité initiale plus élevée
+- **Métriques** : Code coverage >80%, séparation stricte des couches
