--- a/docs/ADR/ADR-002.md
+++ b/docs/ADR/ADR-002.md
@@ -1,26 +1,16 @@
-# ADR 002 – Adoption de l’ORM intégré de Django pour la gestion de la persistance
+#### ADR-002 : Kong API Gateway comme Point d'Entrée Unique
 
-## Contexte
-L’application nécessite un accès fiable et structuré à une base de données PostgreSQL. Django inclut un ORM complet permettant de mapper les classes Python vers des tables SQL tout en offrant un niveau d’abstraction élevé.
+**Status** : Accepted  
+**Context** : Besoin d'orchestrer 5 microservices avec load balancing et sécurité  
+**Decision** : Kong Gateway avec routing automatique, load balancing et authentification par clés API  
 
-## Décision
-J'ai décidé d’utiliser exclusivement l’ORM Django pour la gestion de la persistance :
-- Les modèles (`Produit`, `Magasin`, `Vente`, etc.) sont définis dans `magasin/models/`
-- Les requêtes sont exprimées en Python (ex. `Produit.objects.filter(...)`)
-- Les migrations sont gérées automatiquement (`makemigrations`, `migrate`)
+**Alternatives considérées :**
+- NGINX + configuration manuelle
+- HAProxy
+- Service mesh (Istio)
+- API Gateway AWS/Cloud
 
-## Raisons
-- Réduction massive du code SQL manuel
-- Sécurité renforcée via protection contre l’injection SQL
-- Génération automatique du schéma et des migrations
-- Intégration naturelle avec les tests via les fixtures et bases de test temporaires
-- Productivité accrue et lisibilité améliorée
-
-## Conséquences
-- Tous les accès aux données passent par les modèles Django
-- La cohérence des données est assurée via des validations côté modèle
-- Le chargement initial des données (`initial_data.json`) est compatible avec l’ORM
-
-## Alternatives considérées
-- Accès SQL brut via `psycopg2` : rejeté pour complexité et risques de sécurité
-- Utilisation de SQLAlchemy : incompatible avec Django sans configuration complexe
+**Consequences :**
+- **Positives** : Configuration déclarative, load balancing intégré, plugins riches
+- **Négatives** : Point de défaillance unique, dépendance externe
+- **Implémentation** : 3 instances service-catalogue load-balancées, routing automatique
